# travel_assistant

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  startup.sh
.devcontainer/: devcontainer.json
src/: travel_assistant.py
src/agents/: agent.py  agent_react.py
src/agents/mcp/: agent_react_mcp.py  weather_mcp_server.py
src/agents/tools/: flights_finder.py  hotels_finder.py  weather_check.py
